# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz

[package]
name = "solana-allocator"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21", default-features = false }

[target.'cfg(target_os = "solana")'.dependencies]
solana-program = "1.18.26"
